--- a/app/templates/recipe_form.html
+++ b/app/templates/recipe_form.html
@@ -5,7 +5,20 @@
 
 <form method="POST">
     {{ form.hidden_tag() }}
-    
+
+    {% if form.errors %}
+    <div class="form-errors">
+        <strong>Please fix the following errors:</strong>
+        <ul>
+            {% for field, errors in form.errors.items() %}
+                {% for error in errors %}
+                <li>{{ error }}</li>
+                {% endfor %}
+            {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
+
     <div class="form-group">
         {{ form.title.label }}
         {{ form.title }}
@@ -17,7 +30,7 @@
         </ul>
         {% endif %}
     </div>
-    
+
     <div class="form-group">
         {{ form.description.label }}
         {{ form.description }}
@@ -29,7 +42,7 @@
         </ul>
         {% endif %}
     </div>
-    
+
     <div class="form-group">
         {{ form.ingredients.label }}
         {{ form.ingredients }}
@@ -41,7 +54,7 @@
         </ul>
         {% endif %}
     </div>
-    
+
     <div class="form-group">
         {{ form.instructions.label }}
         {{ form.instructions }}
@@ -53,7 +66,9 @@
         </ul>
         {% endif %}
     </div>
-    
-    {{ form.submit }}
+
+    <div class="form-group">
+        {{ form.submit(class="btn btn-primary") }}
+    </div>
 </form>
 {% endblock %}
