--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,12 @@
 <body>
     <nav>
         <a href="{{ url_for('index') }}">Home</a>
-        <a href="{{ url_for('new_recipe') }}">New Recipe</a>
+        {% if current_user.is_authenticated %}
+            <a href="{{ url_for('new_recipe') }}">New Recipe</a>
+            <a href="{{ url_for('logout') }}">Logout ({{ current_user.username }})</a>
+        {% else %}
+            <a href="{{ url_for('login') }}">Login</a>
+        {% endif %}
     </nav>
     
     {% block content %}{% endblock %}
