--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,16 @@
 {% block content %}
 <h2>Login</h2>
 
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class="flashes">
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
 <form method="POST">
     {{ form.hidden_tag() }}
     
