--- a/app/templates/recipe.html
+++ b/app/templates/recipe.html
@@ -3,6 +3,7 @@
 {% block content %}
 <h1>{{ recipe.title }}</h1>
 <p><strong>Created:</strong> {{ recipe.created.strftime('%Y-%m-%d %H:%M') }}</p>
+<p><strong>Created by:</strong> {{ recipe.user.username if recipe.user else "Unknown" }}</p>
 
 <h2>Description</h2>
 <p>{{ recipe.description }}</p>
@@ -14,10 +15,6 @@
 <p>{{ recipe.instructions }}</p>
 
 <div>
-    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}">
-        <button type="button">Edit</button>
-    </a>
-    
     <form action="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" method="post" style="display: inline;">
         <button type="submit" onclick="return confirm('Are you sure you want to delete this recipe?');">Delete</button>
     </form>
